--- a/.gitignore
+++ b/.gitignore
@@ -9,19 +9,40 @@
 # ~/.config
 !.config/
 .config/*
-
-!.config/dunst/
-!.config/ffox/
-!.config/i3/
 !.config/locale.conf
-!.config/mpv/
-!.config/neofetch/
-!.config/newsboat/
-!.config/ranger/
-!.config/tmux/
 !.config/user-dirs.dirs
+
+# dunst
+!.config/dunst/
+
+# firefox
+!.config/ffox/
+
+# i3
+!.config/i3/
+
+# mpv
+!.config/mpv/
+
+# neofetch
+!.config/neofetch/
+
+# newsboat
+!.config/newsboat/
+
+# ranger
+!.config/ranger/
+
+# tmux
+!.config/tmux/
+
+# xorg
 !.config/xorg/
+
+# yay
 !.config/yay/
+
+# zathura
 !.config/zathura/
 
 # git
@@ -47,7 +68,6 @@
 !.config/nvim/netrw.vim
 !.config/nvim/tabline.vim
 !.config/nvim/vimplug.vim
-
 !.config/nvim/spell
 .config/nvim/spell/*
 !.config/nvim/spell/en.utf-8.add
