--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,116 +1,214 @@
-# ranger config file
+# ===================================================================
+# This file contains the default startup commands for ranger.
+# To change them, it is recommended to create either /etc/ranger/rc.conf
+# (system-wide) or ~/.config/ranger/rc.conf (per user) and add your custom
+# commands there.
+#
+# If you copy this whole file there, you may want to set the environment
+# variable RANGER_LOAD_DEFAULT_RC to FALSE to avoid loading it twice.
+#
+# The purpose of this file is mainly to define keybindings and settings.
 # For running more complex python code, please create a plugin in "plugins/" or
 # a command in "commands.py".
+#
+# Each line is a command that will be run before the user interface
+# is initialized.  As a result, you can not use commands which rely
+# on the UI such as :delete or :mark.
+# ===================================================================
 
-# Path to file preview script
-set preview_script ~/.config/ranger/scope.sh
-set use_preview_script true
+# ===================================================================
+# == Options
+# ===================================================================
 
-# Colorscheme [default, jungle, snow, solarized]
-set colorscheme default
-
-# Viewmode [miller, multipane]
+# Which viewmode should be used?  Possible values are:
+#     miller: Use miller columns which show multiple levels of the hierarchy
+#     multipane: Midnight-commander like multipane view showing all tabs next
+#                to each other
 set viewmode miller
 
-# Column quantity and relative width
-set column_ratios 2,7
+# How many columns are there, and what are their relative widths?
+set column_ratios 3,6
 
-# Hidden files
+# Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
+
+# Show hidden files? You can toggle this by typing 'zh'
 set show_hidden false
 
-# Confirmation when deleting files [always, never, multiple]
+# Ask for a confirmation when running the "delete" command?
+# Valid values are "always", "never", "multiple" (default)
+# With "multiple", ranger will ask only if you delete multiple files at once.
 set confirm_on_delete multiple
 
-# Count files in directories
-set automatically_count_files false
+# Use non-default path for file preview script?
+# ranger ships with scope.sh, a script that calls external programs (see
+# README.md for dependencies) to preview images, archives, etc.
+#set preview_script ~/.config/ranger/scope.sh
 
-# Open all images in the directory when running certain image viewers
-set open_all_images false
+# Use the external preview script or display simple plain text or image previews?
+set use_preview_script true
+
+# Automatically count files in the directory, even before entering them?
+set automatically_count_files true
+
+# Open all images in this directory when running certain image viewers
+# like feh or sxiv?  You can still open selected files by marking them.
+set open_all_images true
 
 # Be aware of version control systems and display information.
 set vcs_aware false
 
-# State of the four backends (git, hg, bzr, svn) [disabled, local, enabled]
+# State of the four backends git, hg, bzr, svn. The possible states are
+# disabled, local (only show local info), enabled (show local and remote
+# information).
 set vcs_backend_git enabled
 set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
 set vcs_backend_svn disabled
 
-# Image preview 
+# Truncate the long commit messages to this length when shown in the statusbar.
+set vcs_msg_length 50
+
+# Use one of the supported image preview protocols
 set preview_images true
-set preview_images_method ueberzug 
+
+# Set the preview image method. Supported methods:
+#
+# * w3m (default):
+#   Preview images in full color with the external command "w3mimgpreview"?
+#   This requires the console web browser "w3m" and a supported terminal.
+#   It has been successfully tested with "xterm" and "urxvt" without tmux.
+#
+# * iterm2:
+#   Preview images in full color using iTerm2 image previews
+#   (http://iterm2.com/images.html). This requires using iTerm2 compiled
+#   with image preview support.
+#
+#   This feature relies on the dimensions of the terminal's font.  By default, a
+#   width of 8 and height of 11 are used.  To use other values, set the options
+#   iterm2_font_width and iterm2_font_height to the desired values.
+#
+# * terminology:
+#   Previews images in full color in the terminology terminal emulator.
+#   Supports a wide variety of formats, even vector graphics like svg.
+#
+# * urxvt:
+#   Preview images in full color using urxvt image backgrounds. This
+#   requires using urxvt compiled with pixbuf support.
+#
+# * urxvt-full:
+#   The same as urxvt but utilizing not only the preview pane but the
+#   whole terminal window.
+#
+# * kitty:
+#   Preview images in full color using kitty image protocol.
+#   Requires python PIL or pillow library.
+#   If ranger does not share the local filesystem with kitty
+#   the transfer method is changed to encode the whole image;
+#   while slower, this allows remote previews,
+#   for example during an ssh session.
+#   Tmux is unsupported.
+#
+# * ueberzug:
+#   Preview images in full color with the external command "ueberzug".
+#   Images are shown by using a child window.
+#   Only for users who run X11 in GNU/Linux.
+set preview_images_method ueberzug
+
+# Delay in seconds before displaying an image with the w3m method.
+# Increase it in case of experiencing display corruption.
+set w3m_delay 0.02
+
+# Manually adjust the w3mimg offset when using a terminal which needs this
+set w3m_offset 0
+
+# Default iTerm2 font size (see: preview_images_method: iterm2)
+set iterm2_font_width 8
+set iterm2_font_height 11
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis false
 
-# BIDI support for RTL languages (Hebrew, Arabic)
+# BIDI support - try to properly display file names in RTL languages (Hebrew, Arabic).
+# Requires the python-bidi pip package
 set bidi_support false
 
 # Show dotfiles in the bookmark preview box?
 set show_hidden_bookmarks true
 
-# Preview files
+# Which colorscheme to use?  These colorschemes are available by default:
+# default, jungle, snow, solarized
+set colorscheme default
+
+# Preview files on the rightmost column?
+# And collapse (shrink) the last column if there is nothing to preview?
 set preview_files true
 set preview_directories true
+set collapse_preview true
 
-# Collapse the last column if there is nothing to preview?
-set collapse_preview false
+# Wrap long lines in plain text previews?
+set wrap_plaintext_previews false
 
-# Console history 
+# Save the console history on exit?
 set save_console_history true
 
-# Status bar on top [false = bottom]
+# Draw the status bar on top of the browser window (default: bottom)
 set status_bar_on_top false
 
-# Progress bar
+# Draw a progress bar in the status bar which displays the average state of all
+# currently running tasks which support progress bars?
 set draw_progress_bar_in_status_bar true
 
-# Borders around columns [none, separators, outline, both]
-set draw_borders both 
+# Draw borders around columns? (separators, outline, both, or none)
+# Separators are vertical lines between columns.
+# Outline draws a box around all the columns.
+# Both combines the two.
+set draw_borders none
 
-# Directory name
+# Display the directory name in tabs?
 set dirname_in_tabs false
 
-# Mouse support?
+# Enable the mouse support?
 set mouse_enabled false
 
-# Display the file size
+# Display the file size in the main column or status bar?
 set display_size_in_main_column true
 set display_size_in_status_bar true
 
-# Display free disk space
-set display_free_space_in_status_bar false
+# Display the free disk space in the status bar?
+set display_free_space_in_status_bar true
 
-# Display files tags in all columns
+# Display files tags in all columns or only in main column?
 set display_tags_in_all_columns true
 
-# Window title
+# Set a title for the window? Updates both `WM_NAME` and `WM_ICON_NAME`
 set update_title false
 
-# Tmux title
+# Set the tmux/screen window-name to "ranger"?
 set update_tmux_title true
 
-# Shorten the title to x directories at once
+# Shorten the title if it gets long?  The number defines how many
+# directories are displayed at once, 0 turns off this feature.
 set shorten_title 3
 
-# Show hostname
+# Show hostname in titlebar?
 set hostname_in_titlebar false
 
-# $HOME displayed with ~ 
+# Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
 set tilde_in_titlebar true
 
-# History size
+# How many directory-changes or console-commands should be kept in history?
 set max_history_size 20
 set max_console_history_size 50
 
-# Space between the top/bottom border when scrolling:
+# Try to keep so much space between the top/bottom border when scrolling:
 set scroll_offset 8
 
-# Flush the input after each key hit
+# Flush the input after each key hit?  (Noticeable when ranger lags)
 set flushinput true
 
 # Padding on the right when there's no preview?
+# This allows you to click into the space to run the file.
 set padding_right true
 
 # Save bookmarks (used with mX and `X) instantly?
@@ -142,6 +240,7 @@ set sort_directories_first true
 set sort_unicode false
 
 # Enable this if key combinations with the Alt Key don't work for you.
+# (Especially on xterm)
 set xterm_alt_key false
 
 # Whether to include bookmarks in cd command
@@ -204,6 +303,14 @@ set global_inode_type_filter
 # should be 'false' during start-up, but you can toggle it by pressing F.
 set freeze_files false
 
+# Print file sizes in bytes instead of the default human-readable format.
+set size_in_bytes false
+
+# Warn at startup if RANGER_LEVEL env var is greater than 0, in other words
+# give a warning when you nest ranger in a subshell started by ranger.
+# Special value "error" makes the warning more visible.
+set nested_ranger_warning true
+
 # ===================================================================
 # == Local Options
 # ===================================================================
@@ -226,6 +333,7 @@ alias qall! quitall!
 alias setl  setlocal
 
 alias filter     scout -prts
+alias hide       scout -prtsv
 alias find       scout -aets
 alias mark       scout -mr
 alias unmark     scout -Mr
@@ -251,6 +359,8 @@ map <esc> change_mode normal
 map ~ set viewmode!
 
 map i display_file
+map <A-j> scroll_preview 1
+map <A-k> scroll_preview -1
 map ? help
 map W display_log
 map w taskview_open
@@ -262,7 +372,7 @@ map !  console shell%space
 map @  console -p6 shell  %%s
 map #  console shell -p%space
 map s  console shell%space
-map r  chain draw_possible_programs; console open_with%%space
+map r  chain draw_possible_programs; console open_with%space
 map f  console find%space
 map cd console cd%space
 
@@ -272,8 +382,10 @@ map <C-p> chain console; eval fm.ui.console.history_move(-1)
 map Mf linemode filename
 map Mi linemode fileinfo
 map Mm linemode mtime
+map Mh linemode humanreadablemtime
 map Mp linemode permissions
 map Ms linemode sizemtime
+map MH linemode sizehumanreadablemtime
 map Mt linemode metatitle
 
 # Tagging / Marking
@@ -295,6 +407,7 @@ map <F5> copy
 map <F6> cut
 map <F7> console mkdir%space
 map <F8> console delete
+#map <F8> console trash
 map <F10> exit
 
 # In case you work on a keyboard with dvorak layout
@@ -354,8 +467,8 @@ map g? cd /usr/share/doc/ranger
 
 # External Programs
 map E  edit
-map du shell -p du --max-depth=1 -h --apparent-size
-map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
+map du shell -p (du --max-depth=1 --human-readable --apparent-size || du -d 1 -h) 2>/dev/null
+map dU shell -p (du --max-depth=1 --human-readable --apparent-size || du -d 1 -h) 2>/dev/null | sort -rh
 map yp yank path
 map yd yank dir
 map yn yank name
@@ -377,8 +490,12 @@ map pl paste_symlink relative=False
 map pL paste_symlink relative=True
 map phl paste_hardlink
 map pht paste_hardlinked_subtree
+map pd console paste dest=
+map p`<any> paste dest=%any_path
+map p'<any> paste dest=%any_path
 
 map dD console delete
+map dT console trash
 
 map dd cut
 map ud uncut
@@ -479,15 +596,18 @@ map zf    console filter%space
 copymap zf zz
 
 # Filter stack
-map .n console filter_stack add name%space
-map .m console filter_stack add mime%space
 map .d filter_stack add type d
 map .f filter_stack add type f
 map .l filter_stack add type l
+map .m console filter_stack add mime%space
+map .n console filter_stack add name%space
+map .# console filter_stack add hash%space
+map ." filter_stack add duplicate
+map .' filter_stack add unique
 map .| filter_stack add or
 map .& filter_stack add and
 map .! filter_stack add not
-map .r console filter_stack rotate
+map .r filter_stack rotate
 map .c filter_stack clear
 map .* filter_stack decompose
 map .p filter_stack pop
@@ -500,20 +620,20 @@ map m<any>  set_bookmark %any
 map um<any> unset_bookmark %any
 
 map m<bg>   draw_bookmarks
-copymap m<bg>  um<bg> `<bg> '<bg>
+copymap m<bg>  um<bg> `<bg> '<bg> p`<bg> p'<bg>
 
 # Generate all the chmod bindings with some python help:
 eval for arg in "rwxXst": cmd("map +u{0} shell -f chmod u+{0} %s".format(arg))
 eval for arg in "rwxXst": cmd("map +g{0} shell -f chmod g+{0} %s".format(arg))
 eval for arg in "rwxXst": cmd("map +o{0} shell -f chmod o+{0} %s".format(arg))
 eval for arg in "rwxXst": cmd("map +a{0} shell -f chmod a+{0} %s".format(arg))
-eval for arg in "rwxXst": cmd("map +{0}  shell -f chmod u+{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map +{0}  shell -f chmod +{0} %s".format(arg))
 
 eval for arg in "rwxXst": cmd("map -u{0} shell -f chmod u-{0} %s".format(arg))
 eval for arg in "rwxXst": cmd("map -g{0} shell -f chmod g-{0} %s".format(arg))
 eval for arg in "rwxXst": cmd("map -o{0} shell -f chmod o-{0} %s".format(arg))
 eval for arg in "rwxXst": cmd("map -a{0} shell -f chmod a-{0} %s".format(arg))
-eval for arg in "rwxXst": cmd("map -{0}  shell -f chmod u-{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map -{0}  shell -f chmod -{0} %s".format(arg))
 
 # ===================================================================
 # == Define keys for the console
@@ -551,6 +671,8 @@ cmap <A-d>        eval fm.ui.console.delete_word(backward=False)
 cmap <C-k>        eval fm.ui.console.delete_rest(1)
 cmap <C-u>        eval fm.ui.console.delete_rest(-1)
 cmap <C-y>        eval fm.ui.console.paste()
+cmap <C-t>        eval fm.ui.console.transpose_chars()
+cmap <A-t>        eval fm.ui.console.transpose_words()
 
 # And of course the emacs way
 copycmap <ESC>       <C-g>
