Change scripts to use absolute paths. Fix script logic and compliance with shellcheck advisories. Move i3blocks scripts to ~/.local/bin

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,50 +1,50 @@
-command=$I3BLOCKS_DIR/$BLOCK_NAME
+command=$XDG_BIN_HOME/i3blocks/$BLOCK_NAME
 separator_block_width=10
 color=#55dddd
 
-[weather]
+[weather.sh]
 interval=1800
 
-[media]
+[media.sh]
 label=🎵 
 signal=11
 interval=10
 
-[ip]
+[ip.sh]
 label=📡 
 signal=10
 interval=once
 
-[openvpn]
+[openvpn.sh]
 label=🌏 
 interval=once
 
-[memory]
+[memory.sh]
 label=💻 
 interval=10
 
-[disk]
+[disk.sh]
 label=🖴 
 color=#dddddd
 interval=3600
 
-[brightness]
+[brightness.sh]
 label= 
 color=#dddddd
 signal=13
 interval=once
 
-[audio]
+[audio.sh]
 label=🔉 
 signal=12
 interval=once
 separator_block_width=5
 
-[calendar]
+[calendar.sh]
 label=
 color=#dddddd
 interval=1
 
-[update]
+[update.sh]
 label=🤔 
 interval=1800
