--- a/.config/i3/config
+++ b/.config/i3/config
@@ -169,7 +169,7 @@ bindsym $mod+r mode "resize"
 #Start i3bar to display a workspace bar
 bar {
     #output primary
-    status_command i3blocks -c $XDG_CONFIG_HOME/i3/i3blocks/config
+    status_command i3blocks -c $XDG_CONFIG_HOME/i3/i3blocks.conf
     tray_output primary
     mode dock
     position top
