Enforce ssh authentication on git push

--- a/.config/git/config
+++ b/.config/git/config
@@ -31,6 +31,10 @@
 [url "https://github.com/"]
 	insteadOf = gh:
 
+[url "git@github.com:"]
+  pushInsteadOf = https://github.com/
+  pushInsteadOf = git://github.com/
+
 [alias]
     # Put 'todo: <text>' (todo must be in capital letters) in any of the tracked files and this will display it along its filename and line number
     todo = !grep --color=always -PHno '(?<=\\x54ODO:).*' $(git ls-files) | sed -r 's/\\x1B\\[K//g' | column -t -N File,Line,Todo -l 3 -s:
