--- a/.config/locale.conf
+++ b/.config/locale.conf
@@ -3,10 +3,10 @@
 LANG="en_US.UTF-8"
 LC_CTYPE="pl_PL.UTF-8"
 LC_NUMERIC="pl_PL.UTF-8"
-LC_TIME="en_US.UTF-8"
+LC_TIME="pl_PL.UTF-8"
 LC_COLLATE="C"
 LC_MONETARY="pl_PL.UTF-8"
-LC_MESSAGES="en_US.UTF-8"
+LC_MESSAGES="pl_PL.UTF-8"
 LC_PAPER="pl_PL.UTF-8"
 LC_NAME="pl_PL.UTF-8"
 LC_ADDRESS="pl_PL.UTF-8"
